# buildsmith

./: Makefile  README.md  flutter.sh  install.sh  podman_docker.sh  rustdesk-compose.yaml  setup.sh  ssh.sh
.devcontainer/: devcontainer.json  flutter-dev.dockerfile  rust-compose.yml
.docker/: Dockerfile  rocm-compose.yaml  rustdesk-compose.yaml
.github/docker/rust-bert/: Dockerfile  docker-compose.yml
.github/workflows/: release.yml  test-install.yml  test.yml
proxmox/: README.md  n8n-lxc-setup.sh
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
runner/src/cli/: commands.rs  mod.rs
runner/src/profiles/: mod.rs  tests.rs
runner/src/scripts/: collector.rs  display.rs  embedded.rs  fs.rs  mod.rs  models.rs  runner.rs  scripts.rs
scripts/: act.sh  flatpak.sh  modular.sh  neovim.sh  podman_docker.sh  rocm.sh  snap-packages.sh  toshy.sh
scripts/alpine/: apk.sh  flutter.sh  git.sh  neovim.sh  nodejs.sh  openssh-server.sh  podman.sh  python.sh
scripts/darwin/: brew.sh  docker-desktop.sh  flutter.sh  git.sh  neovim.sh  nodejs.sh  openssh-server.sh  podman.sh  protonvpn.sh  python.sh
scripts/debian/: apt.sh  docker-desktop.sh  docker-engine.sh  docker.sh  flatpak.sh  flutter.sh  git.sh  gnome-extensions.sh  neovim.sh  nodejs.sh  openssh-server.sh  podman.sh  protonvpn.sh  python.sh  rocm.sh  snap.sh
scripts/unix/: nerd-fonts.sh
scripts/windows/: basic-tools.ps1  docker-desktop.ps1  flutter.ps1  git.ps1  neovim.ps1  nodejs.ps1  openssh-server.ps1  python.ps1
