[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
walkdir = "2.5"
anyhow = "1.0"
os_info = "3.9.1"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
